--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,7 +38,7 @@
               <li><a href="{{ BASE_PATH }}/pages/tutorials1.html">assignments</a></li>
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
               <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/teaching.html">teaching</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/teaching.html">courses</a></li>
               <li><a href="{{ BASE_PATH }}/pages/software.html">toolkit</a></li>
               <li><a href="{{ BASE_PATH }}/pages/tutorials.html">resources</a></li>
           </ul>
