--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,8 +37,8 @@
               <li><a href="{{ BASE_PATH }}/pages/about.html">about</a></li>
               <li><a href="{{ BASE_PATH }}/pages/assignments.html">assignments</a></li>
               <li><a href="{{ BASE_PATH }}/pages/pubs.html">publications</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/talks.html">talks</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/teaching.html">courses</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/presentations.html">presentations</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/courses.html">courses</a></li>
               <li><a href="{{ BASE_PATH }}/pages/software.html">toolkit</a></li>
               <li><a href="{{ BASE_PATH }}/pages/tutorials.html">resources</a></li>
           </ul>
