--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -40,7 +40,7 @@
               <li><a href="{{ BASE_PATH }}/pages/presentations.html">presentations</a></li>
               <li><a href="{{ BASE_PATH }}/pages/courses.html">courses</a></li>
               <li><a href="{{ BASE_PATH }}/pages/software.html">toolkit</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/tutorials.html">resources</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/resources.html">resources</a></li>
           </ul>
         </div>
       </div>
